--- a/css/style23.css
+++ b/css/style23.css
@@ -1,6 +1,9 @@
 h2{
     background-color: rgb(69, 233, 233);
     width: 300px;
+    font-weight: lighter;
+    border-radius: 25px;
+    text-align: center;
     
 }
 
@@ -9,37 +12,53 @@ p{
     width: 200px;
     text-align: center;
     border-radius: 25px;
-}
-
-
-
-#tarefa{
-    color: rgb(2, 27, 27);
-    
-}
-
-.exibir{
-    display: flex;
-    flex-direction: column;
-    width: 700px;
     margin: auto;
-    
+    margin-bottom: 1%;
 }
+
+
 
 .divtarefa{
-    background-color: aquamarine;
-    display: flex;
-    margin: 2%;  
-    justify-content: space-evenly;
-    height: 30px;
+    width: 300px;
+    background-color: rgb(116, 155, 150);
+    padding-bottom: 1%;
+    border-radius: 10px;
+    margin: 2%;
+}
+
+.divtarefa:hover{
+    box-shadow:  5px 5px 5px rgb(50, 211, 10),0px 0px 5px rgb(50, 211, 10) ;
+}
+
+.divbotoes button{
+    margin: 2%;
     padding: 2%;
+    background-color: aliceblue;
+
+}
+
+.divbotoes{
+    margin: auto;
+    width: 38%;
+    
+}
+
+button{
     border-radius: 25px;
 }
 
-.divtarefa h2,h3{
+input{
+    height: 50px;
+    width: 300px;
+    border-radius: 25px;
+    font-size: 25px;
+    text-align: center;
+}
 
-    font-size: 15px;
-    width: 200px;
-    
-    
+#ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 2%;
+    flex-wrap: wrap;
 }
